--- a/client/package.json
+++ b/client/package.json
@@ -16,9 +16,10 @@
     "@mui/icons-material": "^5.17.1",
     "@mui/material": "^5.13.0",
     "@popperjs/core": "^2.11.8",
-    "axios": "^1.8.3",
+    "axios": "^1.8.4",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.8",
+    "date-fns": "^4.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
     "react-chartjs-2": "^5.3.0",
